feat: Add item editing + modal and logic
